kubetrain-k8s/aws/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  type: ExternalName
  externalName: oauth2-proxy.oauth2-proxy.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubetrain
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
    nginx.ingress.kubernetes.io/proxy-write-timeout: 3600
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth?allowed_email_domains=skyworkz.nl,planonsoftware.com"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
      # nginx.ingress.kubernetes.io/whitelist-source-range: "178.85.97.131/32, 87.209.83.20/32"
spec:
  rules:
  - host: johndoe.k8s-training.aws-tests.skyworkz.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubetrain
            port:
              number: 3000
  tls:
  - hosts:
    - johndoe.k8s-training.aws-tests.skyworkz.nl
    secretName: kubetrain-ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubetrain-oauth2-proxy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
    nginx.ingress.kubernetes.io/proxy-write-timeout: 3600
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: kubedev.k3d.localhost
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
  tls:
  - hosts:
    - johndoe.k8s-training.aws-tests.skyworkz.nl
    secretName: kubetrain-ingress
